--- a/src/components/Pourvous/Pourvous.css
+++ b/src/components/Pourvous/Pourvous.css
@@ -24,18 +24,42 @@ body {
   margin-left: 20%;
 
 }
+.container_Audio_big{
+    margin-top: 10%;
+    width: 63%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    transition: 0.3s ease-in-out;
+    font-size: 16px;
+    margin-bottom: 100px;
+    padding: 24px;
+    background: whitesmoke;
+    border-radius: 8px;
+    box-shadow: 0 0 0 1px rgba(53, 72, 91, .07), 0 2px 2px rgba(0, 0, 0, .01), 0 4px 4px rgba(0, 0, 0, .02), 0 10px 8px rgba(0, 0, 0, .03), 0 15px 15px rgba(0, 0, 0, .03), 0 30px 30px rgba(0, 0, 0, .04), 0 70px 65px rgba(0, 0, 0, .05);
+    margin-left: 20%;
+    flex-direction: column;
+    align-items: center;
+  
+}
 .container_pourvous h1{
+    color: #900c27;
+    text-transform: uppercase;
+}
+.container_Audio_big h1{
     color: #900c27;
     text-transform: uppercase;
 }
 .container_pourvous h2{
     color: #F8CD42;
 }
-.list_echapee {
-    width: 100%;
-display: flex;
-flex-direction: column;
+.container_Audio_big h2{
+    color: #F8CD42;
 }
+.container_Audio_big p {
+    text-align: justify;
+}
+
 .container_pourvous p {
     text-align: justify;
 }
@@ -52,6 +76,18 @@ flex-direction: column;
     flex-direction: column;
     
 }
+.container_Audio_small{
+    display: flex;
+    justify-content: space-evenly;
+align-items: center;
+width: 100%;
+flex-wrap: wrap;
+  
+}
+.audioSelf{
+    padding: 10px;
+width: 25%;
+}
 .link {
     color: #900c27;
     text-decoration: none;
@@ -60,6 +96,7 @@ flex-direction: column;
 
 .link:hover {
     color: #F8CD42;
+    text-decoration: none;
 }
 
 
@@ -75,3 +112,5 @@ flex-direction: column;
 .image_logo_evras{
     padding:10px
 }
+
+
