--- a/src/components/Pourvous/Pourvous.css
+++ b/src/components/Pourvous/Pourvous.css
@@ -11,7 +11,7 @@ body {
     margin-top: 10%;
   width: 60%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
   position: relative;
   transition: 0.3s ease-in-out;
@@ -22,6 +22,8 @@ body {
   border-radius: 8px;
   box-shadow: 0 0 0 1px rgba(53, 72, 91, .07), 0 2px 2px rgba(0, 0, 0, .01), 0 4px 4px rgba(0, 0, 0, .02), 0 10px 8px rgba(0, 0, 0, .03), 0 15px 15px rgba(0, 0, 0, .03), 0 30px 30px rgba(0, 0, 0, .04), 0 70px 65px rgba(0, 0, 0, .05);
   margin-left: 20%;
+  flex-direction: column;
+  align-items: center;
 
 }
 .container_Audio_big{
@@ -32,7 +34,6 @@ body {
     flex-wrap: nowrap;
     transition: 0.3s ease-in-out;
     font-size: 16px;
-    margin-bottom: 100px;
     padding: 24px;
     background: whitesmoke;
     border-radius: 8px;
@@ -40,11 +41,14 @@ body {
     margin-left: 20%;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 5%;
+    
   
 }
 .container_pourvous h1{
     color: #900c27;
     text-transform: uppercase;
+    font-size: 50px;
 }
 .container_Audio_big h1{
     color: #900c27;
@@ -75,6 +79,9 @@ body {
     display: flex;
     flex-direction: column;
     
+}
+.containersmall .image_18 {
+    margin-left: 25%;
 }
 .container_Audio_small{
     display: flex;
