--- a/src/components/Pourvous/Pourvous.css
+++ b/src/components/Pourvous/Pourvous.css
@@ -4,6 +4,8 @@ body {
     color: black;
     /* background-color:#F8CD42; */
     font-family: 'Oswald';
+    background-image: url('/public/assets/images/bg.gif');
+    background-size: cover;
 }
 
 
@@ -15,7 +17,7 @@ body {
   flex-wrap: wrap;
   position: relative;
   transition: 0.3s ease-in-out;
-  font-size: 16px;
+  font-size: 18px;
   margin-bottom: 100px;
   padding: 24px;
   background: whitesmoke;
@@ -33,7 +35,7 @@ body {
     justify-content: center;
     flex-wrap: nowrap;
     transition: 0.3s ease-in-out;
-    font-size: 16px;
+    font-size: 18px;
     padding: 24px;
     background: whitesmoke;
     border-radius: 8px;
