--- a/src/components/Trouverdelaide/Trouverdelaide.css
+++ b/src/components/Trouverdelaide/Trouverdelaide.css
@@ -36,7 +36,7 @@ ul{
     line-height: 1.3;
 }
 
-ul > li > a{
+.container-violences-conjugales ul > li > a{
     color: #f6c667;
     font-weight: bold;
     font-size: 1.2rem;
