--- a/src/components/Pourvous/Pourvous.css
+++ b/src/components/Pourvous/Pourvous.css
@@ -26,6 +26,7 @@ body {
   margin-left: 20%;
   flex-direction: column;
   align-items: center;
+  
 
 }
 .container_Audio_big{
@@ -105,6 +106,7 @@ width: 25%;
     color: #900c27;
     text-decoration: none;
     font-weight: 600;
+    cursor: pointer;
 }
 
 .link:hover {
