--- a/src/components/Trouverdelaide/Trouverdelaide.css
+++ b/src/components/Trouverdelaide/Trouverdelaide.css
@@ -8,7 +8,8 @@
 .container-violences-conjugales{
     width: 100vw;
     font-family: 'poppinsextralight';
-    padding-top: 15%;
+    padding-top: 10%;
+    padding-bottom: 10%; /*todo ICI LE PADDING BOTTOM PAS PRIT EN COMPTE ? */
 
     display: flex;
     flex-direction: column;
@@ -41,6 +42,9 @@ ul{
     color: #f6c667;
     font-weight: bold;
     font-size: 1.2rem;
+}
+.container-violences-conjugales ul > li > a:hover{
+    color: #900c27;
 }
 /*~ AUTRES ***********************/
 
@@ -79,8 +83,7 @@ ul{
     line-height: 1.3;
 }
 .redBox a:hover{
-    color: #c70039;
-    background-color: #f6c667;
+    color: whitesmoke;
 }
 .redBox > div{
     display: flex;
@@ -93,4 +96,50 @@ ul{
 }
 .span-center{
     text-align: center;
+}
+
+/*& ABOUT VIOLENCES SEXUELLES *********************/
+
+.container-violences-sexuelles{
+    width: 100%;
+    font-family: 'poppinsextralight';
+    padding-top: 5%;
+    padding-bottom: 5%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/*~ BELGIQUE **************/
+
+.violences-sexuelles-belgique{
+    width: 70%;
+    background: whitesmoke;
+    border-radius: 8px;
+    box-shadow: 0 0 0 1px rgba(53, 72, 91, .07), 0 2px 2px rgba(0, 0, 0, .01), 0 4px 4px rgba(0, 0, 0, .02), 0 10px 8px rgba(0, 0, 0, .03), 0 15px 15px rgba(0, 0, 0, .03), 0 30px 30px rgba(0, 0, 0, .04), 0 70px 65px rgba(0, 0, 0, .05);
+    padding: 3%;
+}
+.title-violence-sexuelle{
+    color: #900c27;
+    text-align: center;
+}
+.violences-sexuelles-belgique a{
+    color: #f6c667;
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+.violences-sexuelles-belgique a:hover{
+    color: #900c27;
+}
+
+/*~ AUTRES ***************/
+
+.violence-sexuelles-autres{
+    width: 90%;
+    padding-top: 5%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
