--- a/src/components/Trouverdelaide/Trouverdelaide.css
+++ b/src/components/Trouverdelaide/Trouverdelaide.css
@@ -6,7 +6,7 @@
 /*& ABOUT VIOLENCES CONJUGALES *********************/
 
 .container-violences-conjugales{
-    width: 100vw;
+    width: 100%;
     font-family: 'poppinsextralight';
     padding-top: 10%;
     padding-bottom: 10%; /*todo ICI LE PADDING BOTTOM PAS PRIT EN COMPTE ? */
