--- a/src/components/Pourvous/Pourvous.css
+++ b/src/components/Pourvous/Pourvous.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&family=Oswald:wght@300&display=swap');
 
+*{
+  font-family: 'Oswald';
+}
 body {
     color: black;
     /* background-color:#F8CD42; */
-    font-family: 'Oswald';
+    
     background-image: url('/public/assets/images/bg.gif');
     background-size: cover;
 }
@@ -26,7 +29,7 @@ body {
   margin-left: 20%;
   flex-direction: column;
   align-items: center;
-  
+  margin-bottom: 15%;
 
 }
 .container_Audio_big{
@@ -45,6 +48,7 @@ body {
     flex-direction: column;
     align-items: center;
     padding-bottom: 5%;
+    margin-bottom: 15%;
     
   
 }
