--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&family=Oswald:wght@300&display=swap');
 
+
+*{
+  font-family: 'Oswald';
+}
 
 body {
   margin: 0;
