--- a/src/components/Pourvous/CommentItem.css
+++ b/src/components/Pourvous/CommentItem.css
@@ -55,13 +55,15 @@ body {
 }
 
 .user-icon {
-  padding: 10px;
-  width: 38px;
+  padding: 11px;
+  width: 42px;
   color: white;
   font-size: 16px;
-  text-align: center;
+  justify-content: center;
   border-radius: 25px;
-  margin-right: 20px;
+  margin-right: 17px;
+  display: flex;
+  margin-top: 1%;
 }
 
 .sub-holder {
