--- a/src/components/Pourvous/CommentItem.css
+++ b/src/components/Pourvous/CommentItem.css
@@ -4,8 +4,8 @@ body {
     color: black;
     /* background-color:#F8CD42; */
     font-family: 'Oswald';
-    background-image: url('/public/assets/images/bg.gif');
-    background-size: cover;
+    /* background-image: url('/public/assets/images/bg.gif');
+    background-size: cover; */
 }
 
 
