--- a/src/components/Accueil.css
+++ b/src/components/Accueil.css
@@ -36,14 +36,20 @@
     height: 95vh;
   }
 } */
-
-#soutenir{
+.tittle_hero{
+  background-color: #ffffff0f;
+padding: 50px;
+border-radius: 20px;
+}
+.soutenir{
   height: 100vh;
+  margin-bottom: 50px;
   
 }
 
 
-#valeur{
+.valeur{
   height: 50vh;
+ 
 }
 
