--- a/src/components/Accueil.css
+++ b/src/components/Accueil.css
@@ -43,14 +43,14 @@ border-radius: 20px;
 }
 
 .soutenir{
-  height: 100vh;
+  height: auto;
   margin-bottom: 50px;
   
 }
 
 
 .valeur{
-  height: 50vh;
+  height: auto;
  
 }
 
