--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,23 +3,28 @@
 header{
     display: flex;
     flex-direction: row;
-    height: 79px;
-    justify-content: space-evenly;
-    
-   
-    margin-left: -12px;
-    font-size: 18px;
+    height: 100px;
     z-index: 9999;
-    border-radius: 20pw;
+    position: relative;
+    width: 75%;
+margin-left: 9%;
   
   }
+ 
   nav{
+    display: flex;
     width: 100%;
-    margin: 0.5% auto;
-    position: sticky;
-    top: 0px;
-    z-index: 9999;
+    margin-top: 2.2%;
+    border-radius: 66px;
+   background-color: #ffffff12;
+   font-size: 20px;
     
+}
+.list_nav{
+    display: flex;
+justify-content: space-between;
+width: 100%;
+
 }
 
 nav ul{
@@ -43,7 +48,7 @@ nav ul::after{
 nav ul a{
     display: block;
     text-decoration: none;
-    color:#900c27;
+    color:#e02965;
     border-bottom: 2px solid transparent;
     padding: 10px 0px;
 }
@@ -55,8 +60,7 @@ ul a:hover{
 
 .sous{
     display: none;
-    box-shadow: 0px 1px 2px #CCC;
-    background-color: white;
+    background-color: #ffffff12;
     position: absolute;
     width: 100%;
     z-index: 1000;
@@ -83,9 +87,18 @@ nav > ul li:hover .sous{
 
 
 .logoNav{
-    width: 30%;
-    padding: 5px;
+    height: 139%;
     z-index: 9999;
+    margin-left: 1%;
+    margin-top: 8px;
+  
 }
-
+.slogan{
+    width: 29%;
+    margin-top: 3.5%;
+    margin-left: 5px;
+    color: #e02965;
+    font-weight: bolder;
+  
+}
 
