--- a/src/components/Pourvous/Comments.css
+++ b/src/components/Pourvous/Comments.css
@@ -66,7 +66,7 @@
 }
 
 .btn {
-  background-color: #c71a74;
+  background-color: #e02965;
   border-style: none;
   border-radius: 2px;
   color: #dee0e3;
