--- a/src/components/Pourvous/Pourvous.css
+++ b/src/components/Pourvous/Pourvous.css
@@ -2,15 +2,22 @@
 
 *{
   font-family: 'Oswald';
+  
 }
 body {
     color: black;
     /* background-color:#F8CD42; */
     
     /* background-image: url('/public/assets/images/bg.gif');
-    background-size: cover; */
+    background-size: cover; */background-color:whitesmoke;
 }
-
+.hero-image-pourvous{
+    background-image: url('/public/assets/images/bgpourvous.jpg');
+    background-size: cover;
+    background-position-y:bottom;
+    height:40vh;
+    margin-top:-100px;
+}
 .flex{
     display: flex;
     justify-content: center;
@@ -59,12 +66,12 @@ body {
   
 }
 .container_pourvous h1{
-    color: #900c27;
+    color: #e02965;
     text-transform: uppercase;
     font-size: 50px;
 }
 .container_Audio_big h1{
-    color: #900c27;
+    color: #e02965;
     text-transform: uppercase;
 }
 .container_pourvous h2{
@@ -113,7 +120,7 @@ flex-wrap: wrap;
 width: 25%;
 }
 .link {
-    color: #900c27;
+    color: #e02965;
     text-decoration: none;
     font-weight: 600;
     cursor: pointer;
