--- a/src/components/Pourvous/Pourvous.css
+++ b/src/components/Pourvous/Pourvous.css
@@ -14,10 +14,19 @@ body {
 .hero-image-pourvous{
     background-image: url('/public/assets/images/bgpourvous.jpg');
     background-size: cover;
-    background-position-y:bottom;
+    background-position-y:center;
     height:40vh;
     margin-top:-100px;
 }
+.hero-image{
+    width: 100%;
+    height:50vh;
+    margin-top:-100px;    
+}
+.hero-image img{
+   object-fit: cover;  
+}
+
 .flex{
     display: flex;
     justify-content: center;
@@ -26,8 +35,6 @@ body {
     flex-wrap: nowrap;
   }
 .container_pourvous {
-    margin-top: 10%;
-  width: 60%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -39,7 +46,6 @@ body {
   background: whitesmoke;
   border-radius: 8px;
   box-shadow: 0 0 0 1px rgba(53, 72, 91, .07), 0 2px 2px rgba(0, 0, 0, .01), 0 4px 4px rgba(0, 0, 0, .02), 0 10px 8px rgba(0, 0, 0, .03), 0 15px 15px rgba(0, 0, 0, .03), 0 30px 30px rgba(0, 0, 0, .04), 0 70px 65px rgba(0, 0, 0, .05);
-  margin-left: 20%;
   flex-direction: column;
   align-items: center;
   margin-bottom: 15%;
@@ -146,3 +152,22 @@ width: 25%;
 }
 
 
+/* equipe */
+.testimonial-card .card-up {
+    height: 120px;
+    overflow: hidden;
+    border-top-left-radius: .25rem;
+    border-top-right-radius: .25rem;
+  }
+  
+  .aqua-gradient {
+    background: radial-gradient(circle, rgba(241,120,173,1) 0%, rgba(248,205,66,1) 100%) !important;
+  }
+  
+  .testimonial-card .avatar {
+    width: 120px;
+    margin-top: -60px;
+    overflow: hidden;
+    border: 5px solid #fff;
+    border-radius: 50%;
+  }
