--- a/src/components/Pourvous/Pourvous.css
+++ b/src/components/Pourvous/Pourvous.css
@@ -1,57 +1,64 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&family=Oswald:wght@300&display=swap');
 
-*{
-  font-family: 'Oswald';
-  
+* {
+    font-family: 'Oswald';
+
 }
+
 body {
     color: black;
     /* background-color:#F8CD42; */
-    
+
     /* background-image: url('/public/assets/images/bg.gif');
-    background-size: cover; */background-color:whitesmoke;
-}
-.hero-image-pourvous{
-    background-image: url('/public/assets/images/bgpourvous.jpg');
-    background-size: cover;
-    background-position-y:center;
-    height:40vh;
-    margin-top:-100px;
-}
-.hero-image{
-    width: 100%;
-    height:50vh;
-    margin-top:-100px;    
-}
-.hero-image img{
-   object-fit: cover;  
+    background-size: cover; */
+    background-color: whitesmoke;
 }
 
-.flex{
+.hero-image-pourvous {
+    background-image: url('/public/assets/images/bgpourvous.jpg');
+    background-size: cover;
+    background-position-y: center;
+    height: 40vh;
+    margin-top: -100px;
+}
+
+.hero-image {
+    width: 100%;
+    height: 50vh;
+    margin-top: -100px;
+}
+
+.hero-image img {
+    object-fit: cover;
+}
+
+.flex {
     display: flex;
     justify-content: center;
     width: 100%;
     height: auto;
     flex-wrap: nowrap;
-  }
+}
+
 .container_pourvous {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  position: relative;
-  transition: 0.3s ease-in-out;
-  font-size: 18px;
-  margin-bottom: 100px;
-  padding: 24px;
-  background: whitesmoke;
-  border-radius: 8px;
-  box-shadow: 0 0 0 1px rgba(53, 72, 91, .07), 0 2px 2px rgba(0, 0, 0, .01), 0 4px 4px rgba(0, 0, 0, .02), 0 10px 8px rgba(0, 0, 0, .03), 0 15px 15px rgba(0, 0, 0, .03), 0 30px 30px rgba(0, 0, 0, .04), 0 70px 65px rgba(0, 0, 0, .05);
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 15%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    position: relative;
+    transition: 0.3s ease-in-out;
+    font-size: 18px;
+    margin-bottom: 100px;
+    padding: 24px;
+    background: whitesmoke;
+    border-radius: 8px;
+    box-shadow: 0 0 0 1px rgba(53, 72, 91, .07), 0 2px 2px rgba(0, 0, 0, .01), 0 4px 4px rgba(0, 0, 0, .02), 0 10px 8px rgba(0, 0, 0, .03), 0 15px 15px rgba(0, 0, 0, .03), 0 30px 30px rgba(0, 0, 0, .04), 0 70px 65px rgba(0, 0, 0, .05);
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 15%;
 
 }
-.container_Audio_big{
+
+.container_Audio_big {
     margin-top: 10%;
     width: 63%;
     display: flex;
@@ -68,24 +75,29 @@ body {
     align-items: center;
     padding-bottom: 5%;
     margin-bottom: 15%;
-    
-  
+
+
 }
-.container_pourvous h1{
+
+.container_pourvous h1 {
     color: #e02965;
     text-transform: uppercase;
     font-size: 50px;
 }
-.container_Audio_big h1{
+
+.container_Audio_big h1 {
     color: #e02965;
     text-transform: uppercase;
 }
-.container_pourvous h2{
+
+.container_pourvous h2 {
     color: #F8CD42;
 }
-.container_Audio_big h2{
+
+.container_Audio_big h2 {
     color: #F8CD42;
 }
+
 .container_Audio_big p {
     text-align: justify;
 }
@@ -99,32 +111,38 @@ body {
     box-shadow: 0 0 0 1px rgba(53, 72, 91, .07), 0 2px 2px rgba(0, 0, 0, .01), 0 4px 4px rgba(0, 0, 0, .02), 0 10px 8px rgba(0, 0, 0, .03), 0 15px 15px rgba(0, 0, 0, .03), 0 30px 30px rgba(0, 0, 0, .04), 0 70px 65px rgba(0, 0, 0, .05);
     border-radius: 8px;
 }
-.image_garance{
+
+.image_garance {
     width: 50%;
     margin-left: 25%;
     box-shadow: 0 0 0 1px rgba(53, 72, 91, .07), 0 2px 2px rgba(0, 0, 0, .01), 0 4px 4px rgba(0, 0, 0, .02), 0 10px 8px rgba(0, 0, 0, .03), 0 15px 15px rgba(0, 0, 0, .03), 0 30px 30px rgba(0, 0, 0, .04), 0 70px 65px rgba(0, 0, 0, .05);
 
 }
-.containersmall{
+
+.containersmall {
     display: flex;
     flex-direction: column;
-    
+
 }
+
 .containersmall .image_18 {
     margin-left: 25%;
 }
-.container_Audio_small{
+
+.container_Audio_small {
     display: flex;
     justify-content: space-evenly;
-align-items: center;
-width: 100%;
-flex-wrap: wrap;
-  
+    align-items: center;
+    width: 100%;
+    flex-wrap: wrap;
+
 }
-.audioSelf{
+
+.audioSelf {
     padding: 10px;
-width: 25%;
+    width: 25%;
 }
+
 .link {
     color: #e02965;
     text-decoration: none;
@@ -138,17 +156,19 @@ width: 25%;
 }
 
 
-.list_echapee{
+.list_echapee {
     width: 100%;
     list-style: none;
 }
-.capable{
+
+.capable {
     display: flex;
     justify-content: space-evenly;
     width: 32%;
 }
-.image_logo_evras{
-    padding:10px
+
+.image_logo_evras {
+    padding: 10px
 }
 
 
@@ -158,16 +178,12 @@ width: 25%;
     overflow: hidden;
     border-top-left-radius: .25rem;
     border-top-right-radius: .25rem;
-  }
-  
-  .aqua-gradient {
-    background: radial-gradient(circle, rgba(241,120,173,1) 0%, rgba(248,205,66,1) 100%) !important;
-  }
-  
-  .testimonial-card .avatar {
+}
+
+.testimonial-card .avatar {
     width: 120px;
     margin-top: -60px;
     overflow: hidden;
     border: 5px solid #fff;
     border-radius: 50%;
-  }
+}
