--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,91 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&family=Oswald:wght@300&display=swap');
 
-header{
-    display: flex;
-    flex-direction: row;
-    height: 100px;
-    z-index: 9999;
-    position: relative;
-    width: 75%;
-margin-left: 9%;
-  
-  }
- 
-  nav{
-    display: flex;
-    width: 100%;
-    margin-top: 2.2%;
-    border-radius: 66px;
-   background-color: #ffffff12;
-   font-size: 20px;
-    
-}
-.list_nav{
-    display: flex;
-justify-content: space-between;
-width: 100%;
-
-}
-
-nav ul{
-    list-style-type: none;
-    
-}
-
-nav ul li{
-    float: left;
-    width: 15%;
-    text-align: center;
-    position: relative;
-}
-
-nav ul::after{
-    content: "";
-    display: table;
-    clear: both;
-}
-
-nav ul a{
-    display: block;
-    text-decoration: none;
-    color:#e02965;
-    border-bottom: 2px solid transparent;
-    padding: 10px 0px;
-}
-
-ul a:hover{
-    color: #F8CD42;
-    border-bottom: 2px solid gold;
-}
-
-.sous{
-    display: none;
-    background-color: #ffffff12;
-    position: absolute;
-    width: 100%;
-    z-index: 1000;
-}
-nav > ul li:hover .sous{
-    display: block;
-}
-.sous li{
-    float: none;
-    width: 100%;
-    text-align: left;
-}
-.sous a{
-    border-bottom: none;
-}
-.sous a:hover{
-    border-bottom: none;
-    background-color: RGBa(200,200,200,0.1);
-}
-.deroulant > a::after{
-    content:" ▼";
-    font-size: 12px;
-}
-
-
 .logoNav{
     height: 139%;
     z-index: 9999;
@@ -100,5 +14,15 @@ nav > ul li:hover .sous{
     color: #e02965;
     font-weight: bolder;
   
+}
+nav ul li {
+ background-color: none!important;
+}
+nav a {
+    color: #e02965 !important;
+    font-size: 18px!important;
+}
+nav a:hover {
+    color: #F8CD42!important;
 }
 
