--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -20,9 +20,42 @@ nav ul li {
 }
 nav a {
     color: #e02965 !important;
-    font-size: 18px!important;
+    font-size: 22px!important;
 }
 nav a:hover {
     color: #F8CD42!important;
 }
+
+.nav-items{
+    box-shadow: rgba(0, 0, 0, 0.68) 0px 4px 12px 0px, rgba(0, 0, 0, 0.3) 0px 2px 4px;
+background: #ffffff1b;
+border-radius: 50px;
+width: 60%;
+height: 100%;
+
+align-items: center;
+margin-top: 1%;
+margin-left: 40%;
+font-weight: 600
+}
+
+.sous{
+    display: none;
+    box-shadow: 0px 1px 2px #e3e3e3;
+    background: #ffffff13!important;
+    position: absolute;
+    width: 100%;
+    z-index: 1000;
+}
+.sous a:hover{
+    border-bottom: none;
+    border-radius: .5rem;
+    background-color: #e02965;
+}
+
+
+
+
+
+   
 
