--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -28,13 +28,14 @@ nav a:hover {
 
 .nav-items{
     box-shadow: rgba(0, 0, 0, 0.68) 0px 4px 12px 0px, rgba(0, 0, 0, 0.3) 0px 2px 4px;
-background: #00000000;
-border-radius: 50px;
+
+border-radius: .5rem;
 width: 60%;
 height: 100%;
-
+background: "hsla(0, 0%, 100%, 0.55)";
+backdrop-filter: blur(30px);
 align-items: center;
-margin-top: 1%;
+margin-top: -2%;
 margin-left: 40%;
 font-weight: 600
 }
@@ -42,7 +43,8 @@ font-weight: 600
 .sous{
     display: none;
     box-shadow: 0px 1px 2px #e3e3e3;
-    background: #000000aa!important;
+    background: "hsla(0, 0%, 100%, 0.55)";
+backdrop-filter: blur(30px);
     position: absolute;
     width: 100%;
     z-index: 1000;
