--- a/src/components/Pourvous/Pourvous.css
+++ b/src/components/Pourvous/Pourvous.css
@@ -15,11 +15,22 @@ body {
 }
 
 .hero-image-pourvous {
-    background-image: url('/public/assets/images/bgpourvous.jpg');
-    background-size: cover;
+    background-image: url('/public/assets/images/bgpourvous.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
     background-position-y: center;
-    height: 40vh;
-    margin-top: -100px;
+    margin-left: 53%;
+height: 104vh;
+margin-top: -171px;
+}
+.hero-image-qui{
+    background-image: url('/public/assets/images/bgquisommenous.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position-y: center;
+    margin-left: 44%;
+height: 104vh;
+margin-top: -171px;
 }
 
 .hero-image {
@@ -195,4 +206,30 @@ body {
     .cascading-right {
       margin-right: 0;
     }
+  }
+  
+  
+  .grainy-gradient-intro:before {
+    background: #c3ccea;
+    filter: url(#f);
+  }
+  .grainy-gradient-intro:before, .grainy-gradient-intro:after {
+    position: fixed;
+    inset: 0;
+    z-index: -1;
+    --grad: radial-gradient(at 50%, red, rgba(255, 0, 0, 0.3) 55%, transparent 80%);
+    --mask: var(--grad), var(--grad);
+    -webkit-mask: var(--mask);
+    -webkit-mask-composite: source-in;
+    -webkit-mask: var(--mask);
+    mask: var(--mask);
+    -webkit-mask-composite: source-in, xor;
+    mask-composite: intersect;
+    mix-blend-mode: unset;
+    content: "";
+  }
+  
+  .grainy-gradient-intro:after {
+     background: linear-gradient(
+  90deg, #760dfe 20%, #c11025ac, #f8cd42);
   }
