--- a/src/components/Pourvous/Comments.css
+++ b/src/components/Pourvous/Comments.css
@@ -2,12 +2,12 @@
 
 .main-container {
   width: 100%;
-  margin-top: 150px;
+
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  height: 100vh;
+  height: auto;
   font-family: 'Oswald';
   
 }
