--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -30,7 +30,7 @@ nav a:hover {
     box-shadow: rgba(0, 0, 0, 0.421) 0px 4px 12px 0px, rgba(0, 0, 0, 0.178) 0px 2px 4px;
 border-radius: .5rem;
 height: 50%;
-background: "hsla(0, 0%, 100%, 0.55)";
+background: hsla(0, 0%, 99%, 0.741) !important;
 backdrop-filter: blur(30px);
 align-items: center;
 margin-top: -2%;
@@ -42,7 +42,7 @@ font-weight: 600
     display: none;
     box-shadow: rgba(0, 0, 0, 0.421) 0px 4px 12px 0px, rgba(0, 0, 0, 0.178) 0px 2px 4px;
 
-    background: "hsla(0, 0%, 100%, 0.55)";
+    background: hsla(0, 0%, 99%, 0.741) !important;
 backdrop-filter: blur(30px);
     position: absolute;
     width: 100%;
