--- a/src/components/Pourvous/Comments.css
+++ b/src/components/Pourvous/Comments.css
@@ -39,7 +39,7 @@
 }
 
 .name-field {
-  width: 280px;
+  width:80%;
   padding: 5px;
   font-size: 14px;
   margin-bottom: 20px;
@@ -48,7 +48,7 @@
   outline: none;
 }
 .comment-field {
-  width: 280px;
+  width: 80%;
   height: 100px;
   font-family: 'Roboto';
   padding: 5px;
