--- a/src/components/Activite/Activites.css
+++ b/src/components/Activite/Activites.css
@@ -3,6 +3,8 @@
   padding-top: 10%;
   height: 150vh;
   background-color: whitesmoke;
+
+  background-image: url("../../../public/assets/images/TrouverAide/SVG/SVG/abstract.svg");
 }
 .cardRow {
   margin-top: 30%;
